# rugol

./: .gitignore  Cargo.toml  LICENSE  README.md  build_wasm.sh
src/: app_config.rs  cell_type.rs  color.rs  colormap.rs  convolution.rs  fade.rs  index_set.rs  main.rs  quad_tree.rs  render_mini.rs  rules.rs  save_file.rs  traits.rs  zoom_window.rs
src/matrix/: const_matrix.rs  convolution.rs  matrix_packed.rs  mod.rs  traits.rs  vec_matrix.rs
src/rugol/: conv_tabs.rs  main.rs  mod.rs  rugol_main.rs  rugol_ui.rs  ui.rs
